--- a/i18n/intl_de_DE.arb
+++ b/i18n/intl_de_DE.arb
@@ -56,7 +56,7 @@
 
       }
    },
-   "destinationDirectory":"Zielverzeichniss",
+   "destinationDirectory":"Zielverzeichnis",
    "@destinationDirectory":{
       "type":"text",
       "placeholders":{
